--- a/src/app/products.component.html
+++ b/src/app/products.component.html
@@ -1,1 +1,6 @@
-<h1>Hi, I am a Products Component!</h1>
+<h1>My Products</h1>
+<label>
+  <input *ngIf="!isDisabled" type="text" [(ngModel)]="productName">
+</label>
+<button *ngIf="!isDisabled" (click)="onAddProduct()">Change Name</button>
+<div *ngFor="let product of products">{{ product }}</div>
